# memory-bridge-supabase

./: .gitignore  PRODUCTION.md  README.md  TEST_PLAN.md  TEST_PLAN_MVP.md  api.py  api_complete.py  client.py  client_complete.py  client_production.py  embeddings.py  notion_sync.py  notion_sync_production.py  obsidian_sync.py  obsidian_sync_production.py  pyproject.toml  rls_production.sql  schema.sql
.github/workflows/: ci.yml
docs/: refactor-map.md
supabase/migrations/: 001_hub_upgrade.sql
tests/: __init__.py  test_client.py  test_obsidian_sync.py
